--- a/snippets/checkout-customization.liquid
+++ b/snippets/checkout-customization.liquid
@@ -2,7 +2,7 @@
   <div class="section__header">
     <div class="layout-flex layout-flex--tight-vertical layout-flex--loose-horizontal layout-flex--wrap">
       <h2 class="section__title layout-flex__item layout-flex__item--stretch" id="main-header" tabindex="-1">{{ 'custom_checkout.order_info.title' | t }}</h2>
-      <p class="section__text">{{ 'custom_checkout.order_info.description' | t }}</p>
+      <p class="section__text layout-flex__item layout-flex__item--stretch">{{ 'custom_checkout.order_info.description' | t }}</p>
     </div>
   </div>
   <div class="section__content" data-section="order-information">
