--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -49,28 +49,24 @@ NOTE TO DEVELOPERS: welcome to Focal theme! We hope that you will enjoy editing 
       <meta name="robots" content="noindex">
     {%- endif -%}
 
-    {%- if request.page_type == 'collection' -%}
-      {% if collection.metafields.custom.no_index or current_tags %}
-        <meta name="robots" content="noindex">
-        <link rel="canonical" href="{{ shop.url }}{{ collection.url }}">
-      {% else %}
-        <link rel="canonical" href="{{ canonical_url }}">
-      {%- endif -%}
+    {%- if request.page_type == 'collection' and current_tags -%}
+      <link rel="canonical" href="{{ shop.url }}{{ collection.url }}">
+    {%- else -%}
+      <link rel="canonical" href="{{ canonical_url }}">
     {%- endif -%}
 
-    {%- if request.page_type == 'product' -%}
-      {% if product.metafields.custom.no_index %}
-        <meta name="robots" content="noindex">
-      {%- endif -%}
+    {%- if request.page_type == 'blog' and current_tags -%}
+      <link rel="canonical" href="{{ shop.url }}{{ blog.url }}">
+    {%- else -%}
+      <link rel="canonical" href="{{ canonical_url }}">
     {%- endif -%}
 
-    {%- if request.page_type == 'blog' -%}
-      {%- if current_tags -%}
-        <meta name="robots" content="noindex">
-        <link rel="canonical" href="{{ shop.url }}{{ blog.url }}">
-      {%- else -%}
-        <link rel="canonical" href="{{ canonical_url }}">
-      {%- endif -%}
+    {% if request.page_type == 'collection' and  collection.metafields.custom.no_index %}
+      <meta name="robots" content="noindex">
+    {%- endif -%}
+
+    {%- if request.page_type == 'product' and product.metafields.custom.no_index %}
+    <meta name="robots" content="noindex">
     {%- endif -%}
 
     {%- if settings.favicon -%}
