--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -49,16 +49,20 @@ NOTE TO DEVELOPERS: welcome to Focal theme! We hope that you will enjoy editing 
       <meta name="robots" content="noindex">
     {%- endif -%}
 
-    {%- if request.page_type == 'collection' and current_tags -%}
-      <link rel="canonical" href="{{ shop.url }}{{ collection.url }}">
-    {%- else -%}
-      <link rel="canonical" href="{{ canonical_url }}">
+    {%- if request.page_type == 'collection' -%}
+      {%- if current_tags -%}
+        <link rel="canonical" href="{{ shop.url }}{{ blog.url }}">
+      {%- else -%}
+        <link rel="canonical" href="{{ canonical_url }}">
+      {%- endif -%}
     {%- endif -%}
 
-    {%- if request.page_type == 'blog' and current_tags -%}
-      <link rel="canonical" href="{{ shop.url }}{{ blog.url }}">
-    {%- else -%}
-      <link rel="canonical" href="{{ canonical_url }}">
+    {%- if request.page_type == 'blog' -%}
+      {%- if current_tags -%}
+        <link rel="canonical" href="{{ shop.url }}{{ blog.url }}">
+      {%- else -%}
+        <link rel="canonical" href="{{ canonical_url }}">
+      {%- endif -%}
     {%- endif -%}
 
     {% if request.page_type == 'collection' and  collection.metafields.custom.no_index %}
