--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -51,7 +51,7 @@ NOTE TO DEVELOPERS: welcome to Focal theme! We hope that you will enjoy editing 
 
     {%- if request.page_type == 'collection' -%}
       {%- if current_tags -%}
-        <link rel="canonical" href="{{ shop.url }}{{ blog.url }}">
+        <link rel="canonical" href="{{ shop.url }}{{ collection.url }}">
       {%- else -%}
         <link rel="canonical" href="{{ canonical_url }}">
       {%- endif -%}
