--- a/sections/wishlist.liquid
+++ b/sections/wishlist.liquid
@@ -12,9 +12,9 @@
 
 <section>
   <div class="container">
-    <div class="content-box content-box--large content-box--text-center content-box--center text-container" style="padding:30px 0px">
+    <div class="content-box content-box--large content-box--text-center content-box--center text-container hidden" id="toggle-wishlist-button" style="padding:30px 0px">
       {%  if customer %}
-        <button type="button" is="toggle-button" id="toggle-wishlist-button" class="button button--primary hidden" aria-controls="product-{{ section.id }}-share-wishlist-drawer" aria-expanded="false"%}>Partager la wishlist</button>
+        <button type="button" is="toggle-button" class="button button--primary" aria-controls="product-{{ section.id }}-share-wishlist-drawer" aria-expanded="false"%}>Partager la wishlist</button>
       {% else %}
         <div>Vous souhaitez partager votre wishlist? Pour cela, merci de <a href="/account/login?checkout_url=/pages/wishlist" class="text--underlined text--xsmall text--strong">vous connecter</a> ou de <a href="/account/register?checkout_url=/pages/wishlist" class="text--underlined text--xsmall text--strong">créer un compte</a>.</div>
       {%  endif %}
