Changes page header

--- a/sections/page-header.liquid
+++ b/sections/page-header.liquid
@@ -54,7 +54,7 @@
                   <a class="breadcrumb__link" href="{{ routes.root_url }}">{{ 'general.breadcrumb.home' | t }}</a>
                 </li>
                 
-                {% if template == 'collection-list' %}
+                {% if template == 'list-collections' %}
                   <li class="breadcrumb__item">
                     <span class="breadcrumb__link" aria-current="page">
                       {{ 'general.meta.list_collections' | t }}
