--- a/sections/page-header.liquid
+++ b/sections/page-header.liquid
@@ -111,11 +111,21 @@
                     <a class="breadcrumb__link" href="{{ routes.root_url }}">{{ 'general.breadcrumb.home' | t }}</a>
                   </li>
           
-                  <li class="breadcrumb__item">
-                    <span class="breadcrumb__link" aria-current="page">
-                      {{- page.title -}}
-                    </span>
-                  </li>
+                  {% if template == 'list-collections' %}
+                    <li class="breadcrumb__item">
+                      <span class="breadcrumb__link" aria-current="page">
+                        {{ 'general.meta.list_collections' | t }}
+                      </span>
+                    </li>
+                  {%- endif -%}
+  
+                  {% if page %}
+                    <li class="breadcrumb__item">
+                      <span class="breadcrumb__link" aria-current="page">
+                        {{- page.title -}}
+                      </span>
+                    </li>
+                  {%- endif -%}
                 </ol>
               </nav>
               
