--- a/sections/collection-footer.liquid
+++ b/sections/collection-footer.liquid
@@ -53,26 +53,49 @@
       <div class="{% unless is_boxed %}container{% endunless %} {% unless blends_with_background %}vertical-breather{% endunless %}">
         {%- assign text_position = section.settings.text_position -%}
         {%- assign text_alignment = section.settings.text_alignment -%}
-
-        <div class="content-box content-box--{{ section.settings.text_width }} content-box--text-{{ text_alignment }} content-box--{{ text_position }} text-container text--xsmall">
-          {%- if section.settings.subheading != blank -%}
-            <h2 class="heading heading--small">{{ section.settings.subheading | escape }}</h2>
-          {%- endif -%}
-
-          {%- if section.settings.title != blank -%}
-            <h3 class="heading h2">{{ section.settings.title | escape }}</h3>
-          {%- endif -%}
-
-          {%- if section.settings.content != blank -%}
-            {{- section.settings.content -}}
-          {%- endif -%}
-
-          {%- if section.settings.button_text != blank -%}
-            <div class="button-wrapper">
-              <a href="{{ section.settings.button_link }}" class="button button--primary">{{ section.settings.button_text | escape }}</a>
+        {%- if section.settings.expandable -%}
+          <w3-expand class="expand grid-row | js-expand expand--expanded" data-height="150" style="--before-expand-height:150px; --expanded-height:821px;">
+            <div class="expand__wrapper">
+              <div class="expand__content u-overflow-hidden richtext u-pad-t-m u-center | js-expand-content">  
+                {%- if section.settings.content != blank -%}
+                  {{- section.settings.content -}}
+                {%- endif -%}
+              </div>
+              <button class="u-flex align-items-center justify-content-center u-full-width | js-expand-button">
+                <span class="expand__button--open js-expand-button--open">
+                  Voir plus
+                </span>
+                <span class="expand__button--close js-expand-button--close">
+                  Voir moins
+                </span>
+                <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" class="icon icon-chevron-down ">
+                  <use href="#icon-chevron-down"></use>
+                </svg>
+                <span class="visually-hidden">chevron-down</span>
+              </button>
             </div>
-          {%- endif -%}
-        </div>
+          </w3-expand>
+        {%- else -%}
+          <div class="content-box content-box--{{ section.settings.text_width }} content-box--text-{{ text_alignment }} content-box--{{ text_position }} text-container text--xsmall">
+            {%- if section.settings.subheading != blank -%}
+              <h2 class="heading heading--small">{{ section.settings.subheading | escape }}</h2>
+            {%- endif -%}
+
+            {%- if section.settings.title != blank -%}
+              <h3 class="heading h2">{{ section.settings.title | escape }}</h3>
+            {%- endif -%}
+
+            {%- if section.settings.content != blank -%}
+              {{- section.settings.content -}}
+            {%- endif -%}
+
+            {%- if section.settings.button_text != blank -%}
+              <div class="button-wrapper">
+                <a href="{{ section.settings.button_link }}" class="button button--primary">{{ section.settings.button_text | escape }}</a>
+              </div>
+            {%- endif -%}
+          </div>
+        {%- endif -%}
       </div>
     </div>
   </div>
@@ -111,6 +134,12 @@
   "name": "Collection footer",
   "class": "shopify-section--collection-footer",
   "settings": [
+    {
+      "type": "checkbox",
+      "id": "expandable",
+      "label": "Expand content",
+      "default": false
+    },
     {
       "type": "text",
       "id": "subheading",
