--- a/assets/theme.css
+++ b/assets/theme.css
@@ -16335,6 +16335,9 @@ input[disabled], input[type="text"][disabled], input[type="email"][disabled], in
   will-change: height;
   padding-bottom: var(--space-l);
   transition: all 200ms cubic-bezier(0.40, 0, 0, 1);
+  overflow: hidden;
+  padding-top: 20px;
+  text-align: center;
 }
 .expand__content:after {
   content: "";
@@ -16347,4 +16350,11 @@ input[disabled], input[type="text"][disabled], input[type="email"][disabled], in
   opacity: 1;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #fff 100%);
   transition: all 200ms cubic-bezier(0.40, 0, 0, 1);
+}
+
+.js-expand-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
