--- a/sections/collection-footer.liquid
+++ b/sections/collection-footer.liquid
@@ -54,7 +54,7 @@
         {%- assign text_position = section.settings.text_position -%}
         {%- assign text_alignment = section.settings.text_alignment -%}
         {%- if section.settings.expandable -%}
-          <w3-expand class="expand js-expand">
+          <w3-expand class="expand js-expand" data-height="150">
             <div class="expand__wrapper">
               <div class="expand__content js-expand-content">  
                 {%- if section.settings.content != blank -%}
