Changes collection footer

--- a/sections/collection-footer.liquid
+++ b/sections/collection-footer.liquid
@@ -57,12 +57,12 @@
           <div class="content-box content-box--{{ section.settings.text_width }} content-box--text-{{ text_alignment }} content-box--{{ text_position }} text-container">
             <w3-expand class="expand js-expand" data-height="150">
               <div class="expand__wrapper">
-                <div class="expand__content js-expand-content text--xsmall">  
+                <div class="expand__content js-expand-content">  
                   {%- if section.settings.content != blank -%}
                     {{- section.settings.content -}}
                   {%- endif -%}
                 </div>
-                <button class="js-expand-button text--xsmall">
+                <button class="js-expand-button">
                   <span class="expand__button--open js-expand-button--open">
                     Voir plus
                   </span>
