--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -217,7 +217,7 @@ NOTE TO DEVELOPERS: welcome to Focal theme! We hope that you will enjoy editing 
       {%- section 'footer' -%}
     {%- endif -%}
 
-    {% include 'klavuio-events' %}
+    {% include 'klavyio-events' %}
     {% include 'swymSnippet' %}
   </body>
 </html>
