--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -69,9 +69,7 @@
                   <span class="expand__button--close js-expand-button--close">
                     Voir moins
                   </span>
-                  <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" class="icon icon-chevron-down ">
-                    <use href="#icon-chevron-down"></use>
-                  </svg>
+                  {%- render 'icon' with 'chevron' -%}
                   <span class="visually-hidden">chevron-down</span>
                 </button>
               </div>
