--- a/sections/collection-footer.liquid
+++ b/sections/collection-footer.liquid
@@ -63,10 +63,10 @@
                   {%- endif -%}
                 </div>
                 <button class="js-expand-button">
-                  <span class="expand__button--open js-expand-button--open">
+                  <span class="expand__button expand__button--open js-expand-button--open">
                     Voir plus
                   </span>
-                  <span class="expand__button--close js-expand-button--close">
+                  <span class="expand__button expand__button--close js-expand-button--close">
                     Voir moins
                   </span>
                   {%- render 'icon' with 'chevron' -%}
