--- a/snippets/cart-free-product.liquid
+++ b/snippets/cart-free-product.liquid
@@ -5,8 +5,12 @@
       <p class="mini-cart__recommendations-heading heading heading--xsmall text--subdued hidden-lap-and-up">{{ section.settings.free_product_title | escape }}</p>
     {%- endif -%}
 
-    <div class="mini-cart__recommendations-list">
-      {%- render 'product-item', product: product, reduced_content: true, reduced_font_size: true, hide_secondary_image: true, show_cta: true, sizes_attribute: '(max-width: 740px) 65px, 92px' -%}
+    <div class="scroller">
+      <div class="scroller__inner">
+        <div class="mini-cart__recommendations-list">
+          {%- render 'product-item', product: product, reduced_content: true, reduced_font_size: true, hide_secondary_image: true, show_cta: true, sizes_attribute: '(max-width: 740px) 65px, 92px' -%}
+        </div>
+      </div>
     </div>
   </div>
 </cart-free-product>
