--- a/snippets/cart-free-product.liquid
+++ b/snippets/cart-free-product.liquid
@@ -1,4 +1,4 @@
-<cart-free-product section-id="{{ section.id }}" class="mini-cart__free-product">
+<cart-free-product section-id="{{ section.id }}" class="mini-cart__recommendations">
   <div class="mini-cart__recommendations-inner">
     {%- if section.settings.free_product_title != blank -%}
       <p class="mini-cart__recommendations-heading heading heading--small hidden-pocket">{{ section.settings.free_product_title | escape }}</p>
