--- a/snippets/cart-free-product.liquid
+++ b/snippets/cart-free-product.liquid
@@ -8,7 +8,7 @@
     <div class="scroller">
       <div class="scroller__inner">
         <div class="mini-cart__recommendations-list">
-          {%- render 'product-item', product: product, reduced_content: true, reduced_font_size: true, hide_secondary_image: true, show_cta: true, sizes_attribute: '(max-width: 740px) 65px, 92px' -%}
+          {%- render 'product-item', product: product, free: true, reduced_content: true, reduced_font_size: true, hide_secondary_image: true, show_cta: true, sizes_attribute: '(max-width: 740px) 65px, 92px' -%}
         </div>
       </div>
     </div>
