--- a/snippets/product-item.liquid
+++ b/snippets/product-item.liquid
@@ -119,33 +119,76 @@
 
       <div class="product-item-meta__price-list-container">
         <div class="price-list price-list--centered">
-          {%- if product.price_varies and product.compare_at_price -%}
-           
-            {%- capture price_min -%}
-              {%- if settings.currency_code_enabled -%}
-                {{- product.price | money_with_currency -}}
-              {%- else -%}
-                {{- product.price | money -}}
-              {%- endif -%}
-            {%- endcapture -%}
+          {%- if free %}
+            
+          {% else %}  
+            {%- if product.price_varies and product.compare_at_price -%}
+            
+              {%- capture price_min -%}
+                {%- if settings.currency_code_enabled -%}
+                  {{- product.price | money_with_currency -}}
+                {%- else -%}
+                  {{- product.price | money -}}
+                {%- endif -%}
+              {%- endcapture -%}
 
-            {%- capture compare_at_price_min -%}
-              {%- if settings.currency_code_enabled -%}
-                {{- product.compare_at_price | money_with_currency -}}
-              {%- else -%}
-                {{- product.compare_at_price | money -}}
-              {%- endif -%}
-            {%- endcapture -%}
+              {%- capture compare_at_price_min -%}
+                {%- if settings.currency_code_enabled -%}
+                  {{- product.compare_at_price | money_with_currency -}}
+                {%- else -%}
+                  {{- product.compare_at_price | money -}}
+                {%- endif -%}
+              {%- endcapture -%}
 
-            {%- if customer and product.price > product.compare_at_price -%}
+              {%- if customer and product.price > product.compare_at_price -%}
+                <span class="price price--highlight">
+                  <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
+                  {{- 'collection.product.from_price_html' | t: price_min: compare_at_price_min -}}
+                </span>
+
+                <span class="price price--compare">
+                  <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>
+
+                  {%- if settings.currency_code_enabled -%}
+                    {{- product.price | money_with_currency -}}
+                  {%- else -%}
+                    {{- product.price | money -}}
+                  {%- endif -%}
+                </span>
+              {%- elsif product.price < product.compare_at_price -%}
+                <span class="price price--highlight">
+                  <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
+                  {{- 'collection.product.from_price_html' | t: price_min: price_min -}}
+                </span>
+
+                <span class="price price--compare">
+                  <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>
+
+                  {%- if settings.currency_code_enabled -%}
+                    {{- product.compare_at_price | money_with_currency -}}
+                  {%- else -%}
+                    {{- product.compare_at_price | money -}}
+                  {%- endif -%}
+                </span>
+              {%- else -%}
+                <span class="price">
+                  <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
+                  {{- 'collection.product.from_price_html' | t: price_min: price_min -}}
+                </span>
+              {%- endif -%}
+            {%- elsif customer and product.price > product.compare_at_price -%}
               <span class="price price--highlight">
                 <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
-                {{- 'collection.product.from_price_html' | t: price_min: compare_at_price_min -}}
+
+                {%- if settings.currency_code_enabled -%}
+                  {{- product.compare_at_price | money_with_currency -}}
+                {%- else -%}
+                  {{- product.compare_at_price | money -}}
+                {%- endif -%}
               </span>
 
               <span class="price price--compare">
                 <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>
-
                 {%- if settings.currency_code_enabled -%}
                   {{- product.price | money_with_currency -}}
                 {%- else -%}
@@ -155,108 +198,69 @@
             {%- elsif product.price < product.compare_at_price -%}
               <span class="price price--highlight">
                 <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
-                {{- 'collection.product.from_price_html' | t: price_min: price_min -}}
+
+                {%- if settings.currency_code_enabled -%}
+                  {{- product.price | money_with_currency -}}
+                {%- else -%}
+                  {{- product.price | money -}}
+                {%- endif -%}
               </span>
 
               <span class="price price--compare">
                 <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>
-
                 {%- if settings.currency_code_enabled -%}
                   {{- product.compare_at_price | money_with_currency -}}
                 {%- else -%}
                   {{- product.compare_at_price | money -}}
                 {%- endif -%}
               </span>
+            {%- elsif product.price_varies -%}
+              {%- capture price_min -%}
+                {%- if settings.currency_code_enabled -%}
+                  {{ product.price_min | money_with_currency }}
+                {%- else -%}
+                  {{ product.price_min | money }}
+                {%- endif -%}
+              {%- endcapture -%}
+
+              {%- capture price_max -%}
+                {%- if settings.currency_code_enabled -%}
+                  {{- product.price_max | money_with_currency -}}
+                {%- else -%}
+                  {{- product.price_max | money -}}
+                {%- endif -%}
+              {%- endcapture -%}
+
+              <span class="price">
+                <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
+                {{- 'collection.product.from_price_html' | t: price_min: price_min, price_max: price_max -}}
+              </span>
             {%- else -%}
               <span class="price">
                 <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
-                {{- 'collection.product.from_price_html' | t: price_min: price_min -}}
+
+                {%- if settings.currency_code_enabled -%}
+                  {{- product.price | money_with_currency -}}
+                {%- else -%}
+                  {{- product.price | money -}}
+                {%- endif -%}
               </span>
             {%- endif -%}
-          {%- elsif customer and product.price > product.compare_at_price -%}
-            <span class="price price--highlight">
-              <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
 
-              {%- if settings.currency_code_enabled -%}
-                {{- product.compare_at_price | money_with_currency -}}
-              {%- else -%}
-                {{- product.compare_at_price | money -}}
-              {%- endif -%}
-            </span>
+            {%- if product.selected_or_first_available_variant.unit_price_measurement -%}
+              <div class="price price--block text--xsmall text--subdued">
+                <div class="unit-price-measurement">
+                  <span class="unit-price-measurement__price">{{ product.selected_or_first_available_variant.unit_price | money }}</span>
+                  <span class="unit-price-measurement__separator">/</span>
 
-            <span class="price price--compare">
-              <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>
-              {%- if settings.currency_code_enabled -%}
-                {{- product.price | money_with_currency -}}
-              {%- else -%}
-                {{- product.price | money -}}
-              {%- endif -%}
-            </span>
-          {%- elsif product.price < product.compare_at_price -%}
-            <span class="price price--highlight">
-              <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
+                  {%- if product.selected_or_first_available_variant.unit_price_measurement.reference_value != 1 -%}
+                    <span class="unit-price-measurement__reference-value">{{ product.selected_or_first_available_variant.unit_price_measurement.reference_value }}</span>
+                  {%- endif -%}
 
-              {%- if settings.currency_code_enabled -%}
-                {{- product.price | money_with_currency -}}
-              {%- else -%}
-                {{- product.price | money -}}
-              {%- endif -%}
-            </span>
-
-            <span class="price price--compare">
-              <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>
-              {%- if settings.currency_code_enabled -%}
-                {{- product.compare_at_price | money_with_currency -}}
-              {%- else -%}
-                {{- product.compare_at_price | money -}}
-              {%- endif -%}
-            </span>
-          {%- elsif product.price_varies -%}
-            {%- capture price_min -%}
-              {%- if settings.currency_code_enabled -%}
-                {{ product.price_min | money_with_currency }}
-              {%- else -%}
-                {{ product.price_min | money }}
-              {%- endif -%}
-            {%- endcapture -%}
-
-            {%- capture price_max -%}
-              {%- if settings.currency_code_enabled -%}
-                {{- product.price_max | money_with_currency -}}
-              {%- else -%}
-                {{- product.price_max | money -}}
-              {%- endif -%}
-            {%- endcapture -%}
-
-            <span class="price">
-              <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
-              {{- 'collection.product.from_price_html' | t: price_min: price_min, price_max: price_max -}}
-            </span>
-          {%- else -%}
-            <span class="price">
-              <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
-
-              {%- if settings.currency_code_enabled -%}
-                {{- product.price | money_with_currency -}}
-              {%- else -%}
-                {{- product.price | money -}}
-              {%- endif -%}
-            </span>
-          {%- endif -%}
-
-          {%- if product.selected_or_first_available_variant.unit_price_measurement -%}
-            <div class="price price--block text--xsmall text--subdued">
-              <div class="unit-price-measurement">
-                <span class="unit-price-measurement__price">{{ product.selected_or_first_available_variant.unit_price | money }}</span>
-                <span class="unit-price-measurement__separator">/</span>
-
-                {%- if product.selected_or_first_available_variant.unit_price_measurement.reference_value != 1 -%}
-                  <span class="unit-price-measurement__reference-value">{{ product.selected_or_first_available_variant.unit_price_measurement.reference_value }}</span>
-                {%- endif -%}
-
-                <span class="unit-price-measurement__reference-unit">{{ product.selected_or_first_available_variant.unit_price_measurement.reference_unit }}</span>
+                  <span class="unit-price-measurement__reference-unit">{{ product.selected_or_first_available_variant.unit_price_measurement.reference_unit }}</span>
+                </div>
               </div>
-            </div>
+            {%- endif -%}
           {%- endif -%}
         </div>
       </div>
